Update OBS Distribution list.

--- a/downloads.html
+++ b/downloads.html
@@ -402,6 +402,11 @@
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_9.0/ ./</code></small>
                             </pre>
 
+                            <h3>Debian 10 (Buster)</h3>
+                            <pre>
+                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_10/ ./</code></small>
+                            </pre>
+
                             <h3>Debian Testing</h3>
                             <pre>
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_Testing/ ./</code></small>
@@ -448,7 +453,12 @@
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_15.0/</code></small>
                             </pre>
-                            
+
+                            <h3>openSUSE Leap 15.1 (64-bit only)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_15.1/</code></small>
+                            </pre>
+
                             <h3>openSUSE Tumbleweed</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Tumbleweed/</code></small>
@@ -481,11 +491,15 @@
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_28/</code></small>
                             </pre>
 
-                            <h3>Fedora 29</h3>
+                            <h3>Fedora 29 (x86_64, i586, armv7l, aarch64, ppc64le)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_29/</code></small>
                             </pre>
 
+                            <h3>Fedora 30 (x86_64, i586, armv7l, aarch64, ppc64le)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_30/</code></small>
+                            </pre>
 
                             <h3>Fedora Rawhide</h3>
                             <pre>
