--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <header>
-    <h1>OpenSCAD CheatSheet</h1>
+    <h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
     <h2>v2019.05</h2>
   </header>
   <section>
