Sync snapshot cheatsheet with color updates.

--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <header>
-    <h1>OpenSCAD CheatSheet</h1>
+    <h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
     <h2>(<a href="http://www.openscad.org/downloads.html#snapshots">dev snapshot</a>)</h2>
   </header>
   <section>
