--- a/downloads.html
+++ b/downloads.html
@@ -163,7 +163,7 @@
 				<a id="WIN32_RELEASE_INSTALLER_URL" href="https://files.openscad.org">
 			  <h3 id="WIN32_RELEASE_INSTALLER_NAME">OpenSCAD</h3></a>
 				<small>x86 (32-bit) - exe installer - </small><small id="WIN32_RELEASE_INSTALLER_SIZE">?? MB</small><br>
-				<small><a id="WIN32_RELEASE_INSTALLER_ASC_URL" href="">asc</a></small> -
+				<!--<small><a id="WIN32_RELEASE_INSTALLER_ASC_URL" href="">asc</a></small> - -->
 				<small><a id="WIN32_RELEASE_INSTALLER_SHA256_URL" href="">sha256</a></small> -
 				<small><a id="WIN32_RELEASE_INSTALLER_SHA512_URL" href="">sha512</a></small>
 			</div>
@@ -171,7 +171,7 @@
 				<a id="WIN32_RELEASE_ZIP_URL" href="https://files.openscad.org">
 			  <h3 id="WIN32_RELEASE_ZIP_NAME">OpenSCAD</h3></a>
 				<small>x86 (32-bit) - zip package - </small><small id="WIN32_RELEASE_ZIP_SIZE">?? MB</small><br>
-				<small><a id="WIN32_RELEASE_ZIP_ASC_URL" href="">asc</a></small> -
+				<!--<small><a id="WIN32_RELEASE_ZIP_ASC_URL" href="">asc</a></small> - -->
 				<small><a id="WIN32_RELEASE_ZIP_SHA256_URL" href="">sha256</a></small> -
 				<small><a id="WIN32_RELEASE_ZIP_SHA512_URL" href="">sha512</a></small>
 			</div>
@@ -180,7 +180,7 @@
 				<a id="WIN64_RELEASE_INSTALLER_URL" href="https://files.openscad.org">
 			  <h3 id="WIN64_RELEASE_INSTALLER_NAME">OpenSCAD</h3></a>
 				<small>x86 (64-bit) - exe installer - </small><small id="WIN64_RELEASE_INSTALLER_SIZE">?? MB</small><br>
-				<small><a id="WIN64_RELEASE_INSTALLER_ASC_URL" href="">asc</a></small> -
+				<!--<small><a id="WIN64_RELEASE_INSTALLER_ASC_URL" href="">asc</a></small> - -->
 				<small><a id="WIN64_RELEASE_INSTALLER_SHA256_URL" href="">sha256</a></small> -
 				<small><a id="WIN64_RELEASE_INSTALLER_SHA512_URL" href="">sha512</a></small>
 			</div>
@@ -188,7 +188,7 @@
 				<a id="WIN64_RELEASE_ZIP_URL" href="https://files.openscad.org">
 			  <h3 id="WIN64_RELEASE_ZIP_NAME">OpenSCAD</h3></a>
 				<small>x86 (64-bit) - zip package - </small><small id="WIN64_RELEASE_ZIP_SIZE">?? MB</small><br>
-				<small><a id="WIN64_RELEASE_ZIP_ASC_URL" href="">asc</a></small> -
+				<!-- <small><a id="WIN64_RELEASE_ZIP_ASC_URL" href="">asc</a></small> - -->
 				<small><a id="WIN64_RELEASE_ZIP_SHA256_URL" href="">sha256</a></small> -
 				<small><a id="WIN64_RELEASE_ZIP_SHA512_URL" href="">sha512</a></small>
 			</div>
@@ -239,7 +239,7 @@
 					<a id="LIN64_RELEASE_URL" href="https://files.openscad.org">
 					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) - AppImage - </small><small id="LIN64_RELEASE_SIZE">?? MB</small><br>
-					<small><a id="LIN64_RELEASE_ASC_URL" href="">asc</a></small> -
+					<!-- <small><a id="LIN64_RELEASE_ASC_URL" href="">asc</a></small> - -->
 					<small><a id="LIN64_RELEASE_SHA256_URL" href="">sha256</a></small> -
 					<small><a id="LIN64_RELEASE_SHA512_URL" href="">sha512</a></small>
 				</div>
@@ -282,7 +282,7 @@
 			<button class="left, last, download-button">
 			  <h3 id="SRC_RELEASE_NAME">OpenSCAD</h3>
 			  <small>source code - tgz archive -</small><small id="SRC_RELEASE_SIZE">?? MB</small><br/>
-			  <small><a id="SRC_RELEASE_ASC_URL" href="">asc</a></small> - 
+			  <!-- <small><a id="SRC_RELEASE_ASC_URL" href="">asc</a></small> - -->
 			  <small><a id="SRC_RELEASE_SHA256_URL" href="">sha256</a></small> - 
 			  <small><a id="SRC_RELEASE_SHA512_URL" href="">sha512</a></small>
 			</button>
@@ -312,7 +312,7 @@
 					<a id="WIN32_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
 					<h3 id="WIN32_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) - exe installer - </small><small id="WIN32_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
-					<small><a id="WIN32_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> -
+					<!-- <small><a id="WIN32_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> - -->
 					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
 				</div>
 
@@ -320,7 +320,7 @@
 					<a id="WIN32_SNAPSHOT_ZIP_URL" href="https://files.openscad.org">
 					<h3 id="WIN32_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) - zip package - </small><small id="WIN32_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
-					<small><a id="WIN32_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> -
+					<!-- <small><a id="WIN32_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> - -->
 					<small><a id="WIN32_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
 				</div>
 
@@ -328,7 +328,7 @@
 					<a id="WIN64_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
 					<h3 id="WIN64_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) - exe installer - </small><small id="WIN64_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
-					<small><a id="WIN64_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> -
+					<!-- <small><a id="WIN64_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> - -->
 					<small><a id="WIN64_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
 				</div>
 
@@ -336,7 +336,7 @@
 					<a id="WIN64_SNAPSHOT_ZIP_URL" href="https://files.openscad.org">
 					<h3 id="WIN64_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) - zip package - </small><small id="WIN64_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
-					<small><a id="WIN64_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> -
+					<!-- <small><a id="WIN64_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> - -->
 					<small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
 				</div>
 			</div>
@@ -351,7 +351,7 @@
 				<a id="LIN64_SNAPSHOT_URL" href="https://files.openscad.org">
 				<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3></a>
 				<small>x86 (64-bit) - AppImage - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small><br>
-				<small><a id="LIN64_SNAPSHOT_ASC_URL" href="">asc</a></small> -
+				<!-- <small><a id="LIN64_SNAPSHOT_ASC_URL" href="">asc</a></small> - -->
 				<small><a id="LIN64_SNAPSHOT_SHA256_URL" href="">sha256</a></small>
 			</div>
 
@@ -504,13 +504,6 @@
 
 			<p>Prior releases are available at <a href="https://files.openscad.org">files.openscad.org</a></p>
 		</section>
-
-		<section id="pgp">
-			<h1>PGP Signature</h1>
-
-			<p>Any signed downloads will use the OpenSCAD Development Team's PGP key: <a href="OpenSCAD_public_key.asc">OpenSCAD_public_key.asc</a> (ID: 22164A0F, fingerprint: E2EB DADD 336F F516 ADD5  1A78 F3E1 2CCC 2216 4A0)</p>
-		</section>
-
 
 </article>
 
