--- a/downloads.html
+++ b/downloads.html
@@ -297,12 +297,14 @@
 
 			<div id="snapshots-osx" class="subsection">
 				<h2>macOS</h2>
-				<a id="MAC_SNAPSHOT_URL" href="https://files.openscad.org">
-				<button class="download-button">
-					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3>
-					<small>64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small>
-				</button>
-				</a>
+
+				<div class="left, download-button">
+					<a id="MAC_SNAPSHOT_URL" href="https://files.openscad.org">
+					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3></a>
+					<small>64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small><br>
+					<small><a id="MAC_SNAPSHOT_SHA256_URL" href="">sha256</a></small> -
+					<small><a id="MAC_SNAPSHOT_SHA512_URL" href="">sha512</a></small>
+				</div>
 			</div>
 
 			<div id="snapshots-windows" class="subsection">
@@ -313,7 +315,8 @@
 					<h3 id="WIN32_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) - exe installer - </small><small id="WIN32_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
 					<!-- <small><a id="WIN32_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> - -->
-					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small> -
+					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA512_URL" href="">sha512</a></small>
 				</div>
 
 				<div class="download-button">
@@ -321,7 +324,8 @@
 					<h3 id="WIN32_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) - zip package - </small><small id="WIN32_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
 					<!-- <small><a id="WIN32_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> - -->
-					<small><a id="WIN32_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN32_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small> -
+					<small><a id="WIN32_SNAPSHOT_ZIP_SHA512_URL" href="">sha512</a></small>
 				</div>
 
 				<div class="left, download-button">
@@ -329,7 +333,8 @@
 					<h3 id="WIN64_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) - exe installer - </small><small id="WIN64_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
 					<!-- <small><a id="WIN64_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> - -->
-					<small><a id="WIN64_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN64_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small> -
+					<small><a id="WIN64_SNAPSHOT_INSTALLER_SHA512_URL" href="">sha512</a></small>
 				</div>
 
 				<div class="download-button">
@@ -337,22 +342,25 @@
 					<h3 id="WIN64_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) - zip package - </small><small id="WIN64_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
 					<!-- <small><a id="WIN64_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> - -->
-					<small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small> -
+					<small><a id="WIN64_SNAPSHOT_ZIP_SHA512_URL" href="">sha512</a></small>
 				</div>
 			</div>
 
 			<div id="snapshots-linux" class="subsection">
-			    <h2>Linux - AppImage</h2>
-                            <p>Please try the automatically built snapshots first if you are running a supported
-				distribution (see <a href="#snapshots-linux-distro">below</a>), the following
-				AppImage builds are still experimental.</p>
+			<h2>Linux - AppImage</h2>
 
-			    <div class="left, download-button">
+			<p>Please try the automatically built snapshots first if you are running a
+			supported distribution (see <a href="#snapshots-linux-distro">below</a>), the
+			following AppImage builds are still experimental.</p>
+
+			<div class="left, download-button">
 				<a id="LIN64_SNAPSHOT_URL" href="https://files.openscad.org">
 				<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3></a>
 				<small>x86 (64-bit) - AppImage - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small><br>
 				<!-- <small><a id="LIN64_SNAPSHOT_ASC_URL" href="">asc</a></small> - -->
-				<small><a id="LIN64_SNAPSHOT_SHA256_URL" href="">sha256</a></small>
+				<small><a id="LIN64_SNAPSHOT_SHA256_URL" href="">sha256</a></small> -
+				<small><a id="LIN64_SNAPSHOT_SHA512_URL" href="">sha512</a></small>
 			</div>
 
 			    <h2>Linux - Snap</h2>
