--- a/downloads.html
+++ b/downloads.html
@@ -447,6 +447,11 @@
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_19.04/ ./</code></small>
                             </pre>
 
+                            <h3>Ubuntu 19.10</h3>
+                            <pre>
+                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_19.10/ ./</code></small>
+                            </pre>
+
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
                             
                             <h3>openSUSE Leap 42.3 (64-bit only)</h3>
