Add page title.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
     <link rel="stylesheet" href="snow.css">
+    <title>OpenSCAD Advent Calendar 2019</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="snow.js"></script>
 <script>
