Switch to animated gif for 24th.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -187,7 +187,7 @@ label:hover .door {
 .day-21 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/21.png); }
 .day-22 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/22.png); }
 .day-23 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/23.png); }
-.day-24 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/24.png); }
+.day-24 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/24.gif); }
 
 .day-1 { grid-area: d1; }
 .day-2 { grid-area: d2; }
