--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -179,9 +179,9 @@ label:hover .door {
 .day-13 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/13.png); }
 .day-14 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/14.png); }
 .day-15 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/15.png); }
-.day-16 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/16.png); }
+.day-16 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/16.gif); }
 .day-17 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/17.png); }
-.day-18 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/18.png); }
+.day-18 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/18.gif); }
 .day-19 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/19.png); }
 .day-20 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/20.png); }
 .day-21 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/21.png); }
