--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -164,6 +164,27 @@ label:hover .door {
   background: no-repeat center/80% url(../images/openscad.png);
 }
 
+.sep {
+  color: #9dcb51;
+}
+
+div.footer {
+  position: fixed;
+  bottom: 4px;
+  width: 100%;
+  text-align: center;
+  font-family: sans;
+  color: #aaa;
+}
+
+a.footer {
+  color: #aaa;
+}
+
+a.footer:hover {
+  color: rgba(249, 215, 44, 1);
+}
+
 .day-1 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/01.png); }
 .day-2 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/02.png); }
 .day-3 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/03.png); }
@@ -245,5 +266,16 @@ label:hover .door {
   <div class="day-23"><label><input type="checkbox"><div class="door"><div class="front">23</div><div class="back"></div></div><div class="content hide"><div class="link"><a href="https://files.openscad.org/advent-calendar-2019/23.scad">23.scad</a></div></div></input></label></div>
   <div class="day-24"><label><input type="checkbox"><div class="door"><div class="front">24</div><div class="back"></div></div><div class="content hide"><div class="link"><a href="https://files.openscad.org/advent-calendar-2019/24.scad">24.scad</a></div></div></input></label></div>
 </section>
+<div class="footer">
+<span class="sep">||</span>
+<a class="footer" href="https://www.openscad.org/downloads.html">Download OpenSCAD</a>
+<span class="sep">||</span>
+<a class="footer" href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a>
+<span class="sep">||</span>
+All scripts are licensed <a class="footer" ref="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
+<span class="sep">||</span>
+Doors open midnight UTC
+<span class="sep">||</span>
+</div>
 </body>
 </html>
