--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -272,7 +272,7 @@ a.footer:hover {
 <span class="sep">||</span>
 <a class="footer" href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a>
 <span class="sep">||</span>
-All scripts are licensed <a class="footer" ref="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
+All scripts are licensed <a class="footer" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
 <span class="sep">||</span>
 Doors open midnight UTC
 <span class="sep">||</span>
