Switch day 21 to animated gif.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -205,7 +205,7 @@ a.footer:hover {
 .day-18 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/18.gif); }
 .day-19 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/19.png); }
 .day-20 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/20.png); }
-.day-21 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/21.png); }
+.day-21 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/21.gif); }
 .day-22 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/22.png); }
 .day-23 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/23.png); }
 .day-24 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2019/24.gif); }
