--- a/downloads.html
+++ b/downloads.html
@@ -454,11 +454,6 @@
 
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
                             
-                            <h3>openSUSE Leap 42.3 (64-bit only)</h3>
-                            <pre>
-                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_42.3/</code></small>
-                            </pre>
-                            
                             <h3>openSUSE Leap 15.0 (64-bit only)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_15.0/</code></small>
@@ -494,6 +489,11 @@
                             <h3>Fedora 30 (x86_64, i586, armv7l, aarch64, ppc64le)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_30/</code></small>
+                            </pre>
+
+                            <h3>Fedora 31 (x86_64, armv7l, aarch64, ppc64le)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_31/</code></small>
                             </pre>
 
                             <h3>Fedora Rawhide</h3>
