Add link to repo with designs.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -280,7 +280,7 @@ a.footer:hover {
 <span class="sep">||</span>
 All scripts are licensed <a class="footer" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
 <span class="sep">||</span>
-Doors open midnight UTC
+<a class="footer" href="https://github.com/openscad/openscad-advent-calendar-2019/">Design repo on github</a>
 <span class="sep">||</span>
 </div>
 </body>
