Add Tutorial and update User Manual and Language Reference.

--- a/documentation.html
+++ b/documentation.html
@@ -91,33 +91,86 @@
 	<div id="sidebar" class="sticky">
 		<h1>Documentation</h1>
 		<ul>
+			<li><a href="#tutorial">OpenSCAD Tutorial</a></li>
 			<li><a href="#user-manual">OpenSCAD User Manual</a></li>
+			<li><a href="#language-reference">OpenSCAD Language Reference</a></li>
 			<li><a href="#cheat-sheet">Code Cheat Sheet</a></li>
 			<li><a href="#tutorials-blogs">Tutorials - Articles / Blogs</a></li>
 			<li><a href="#tutorials-video">Tutorials - Video</a></li>
 		</ul>
 	</div>
-	
-	<article>
-		<section id="user-manual">
-			<h1><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">OpenSCAD User Manual</a></h1>
-			<h2>Table of Contents</h2>
-			<ol>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/First_Steps" target="_blank" title="OpenSCAD User Manual/First Steps">First Steps</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/The_OpenSCAD_User_Interface" target="_blank" title="OpenSCAD User Manual/The OpenSCAD User Interface">The OpenSCAD User Interface</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/The_OpenSCAD_Language" target="_blank" title="OpenSCAD User Manual/The OpenSCAD Language">The OpenSCAD Language</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem" target="_blank" title="OpenSCAD User Manual/Using the 2D Subsystem">Using the 2D Subsystem</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/STL_Import_and_Export" target="_blank" title="OpenSCAD User Manual/STL Import and Export">STL Import and Export</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Commented_Example_Projects" target="_blank" title="OpenSCAD User Manual/Commented Example Projects">Commented Example Projects</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_an_external_Editor_with_OpenSCAD" target="_blank" title="Using an external Editor with OpenSCAD">Using an external Editor with OpenSCAD</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_OpenSCAD_in_a_command_line_environment" target="_blank" title="OpenSCAD User Manual/Using OpenSCAD in a command line environment">Using OpenSCAD in a command line environment</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Building_OpenSCAD_from_Sources" target="_blank" title="OpenSCAD User Manual/Building OpenSCAD from Sources">Building OpenSCAD from Sources</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/FAQ" target="_blank" title="FAQ">FAQ</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Libraries" target="_blank" title="Libraries">Libraries</a></li>
-				<li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Command_Glossary" target="_blank" title="OpenSCAD User Manual/Command Glossary">Glossary</a></li>
-			</ol>
-			
-		</section>
+
+  <article>
+    <section id="tutorial">
+      <h1><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a></h1>
+      <h2>Table of Contents</h2>
+      <ol>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_1">Chapter 1</a>: A view words about OpenSCAD and getting started with the first object</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_2">Chapter 2</a>: Scaling the model and first steps for parameterizing models</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_3">Chapter 3</a>: Resizing models and more ways of combining objects</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_4">Chapter 4</a>: Introducing modules to organize the code</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_5">Chapter 5</a>: Using multiple scripts and libraries</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_6">Chapter 6</a>: Control flow, conditional creation of objects</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_7">Chapter 7</a>: Loops and creating more complex patterns</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_8">Chapter 8</a>: Extruding 2D shapes into 3D objects</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_9">Chapter 9</a>: Math, calculations and low level geometry creation</li>
+      </ol>
+    </section>
+
+    <section id="user-manual">
+      <h1><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual#The_OpenSCAD_User_Manual">OpenSCAD User Manual</a></h1>
+      <h2>Table of Contents</h2>
+      <ol>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual#Introduction">Introduction</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/First_Steps">First Steps</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/The_OpenSCAD_User_Interface">User Interface</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Input_Devices">Input Devices</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Customizer">Customizer</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/STL_Import_and_Export">Import and Export</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Commented_Example_Projects">Commented Example Projects</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Paths">Paths</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_an_external_Editor_with_OpenSCAD">Using an external Editor with OpenSCAD</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_OpenSCAD_in_a_command_line_environment">Using OpenSCAD in a command line environment</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Building_OpenSCAD_from_Sources">Building OpenSCAD from Sources</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/FAQ">FAQ</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Libraries">Libraries</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Tips_and_Tricks">Tips and Tricks</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Command_Glossary">Glossary</a></li>
+      </ol>			
+    </section>
+
+    <section id="language-reference">
+      <h1><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual#The_OpenSCAD_Language_Reference">OpenSCAD Language Reference</a></h1>
+      <h2>Table of Contents</h2>
+      <ol>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General">The OpenSCAD Language - General</a></li>
+        <li>
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Primitive_Solids">3D Objects</a>,
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/3D_to_2D_Projection">Projection</a>
+        </li>
+        <li>
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem">2D Objects</a>,
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/2D_Primitives">Primitives</a>,
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Text">Text</a>,
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/2D_to_3D_Extrusion">Extrusion to 3D</a>
+        </li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Transformations">Transformations</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/CSG_Modelling">Boolean operations</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Conditional_and_Iterator_Functions">Conditional and iterator functions</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Mathematical_Operators">Mathematical operators</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Mathematical_Functions">Mathematical functions</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/String_Functions">String functions</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Type_Test_Functions">Type test functions</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/List_Comprehensions">List comprehensions</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features">Other language features</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules">User defined functions and modules</a></li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Modifier_Characters">Debugging aids - modifier characters</a></li>
+        <li>
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Importing_Geometry">Importing geometry</a>,
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Export">Exporting geometry</a>
+        </li>
+      </ol>
+    </section>
 
 		<section id="cheat-sheet">
 			<h1>Cheat Sheet</h1>
