--- a/documentation.html
+++ b/documentation.html
@@ -105,7 +105,7 @@
       <h1><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a></h1>
       <h2>Table of Contents</h2>
       <ol>
-        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_1">Chapter 1</a>: A view words about OpenSCAD and getting started with the first object</li>
+        <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_1">Chapter 1</a>: A few words about OpenSCAD and getting started with the first object</li>
         <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_2">Chapter 2</a>: Scaling the model and first steps for parameterizing models</li>
         <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_3">Chapter 3</a>: Resizing models and more ways of combining objects</li>
         <li><a href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial/Chapter_4">Chapter 4</a>: Introducing modules to organize the code</li>
