--- a/downloads.html
+++ b/downloads.html
@@ -40,14 +40,19 @@
 	<script>
 	  var fileinfo = {};
 	</script>
-	<script src="inc/mac_snapshot_links.js"></script>
-	<script src="inc/win_snapshot_links.js"></script>
-	<script src="inc/linux_snapshot_links.js"></script>
 	<script src="inc/mac_release_links.js"></script>
 	<script src="inc/win_release_links.js"></script>
 	<script src="inc/linux_release_links.js"></script>
 	<script src="inc/src_release_links.js"></script>
 	<script>
+	  function setSnapshotFileInfo(key, name, size, url) {
+	    fileinfo[key + "_NAME"] = name;
+	    fileinfo[key + "_SIZE"] = size;
+	    fileinfo[key + "_URL"] = url;
+	    fileinfo[key + "_ASC_URL"] = url + ".asc";
+	    fileinfo[key + "_SHA256_URL"] = url + ".sha256";
+	    fileinfo[key + "_SHA512_URL"] = url + ".sha512";
+	  }
 	  jQuery(document).ready(function(){
 	    for (var fileid in fileinfo) {
 	      if (fileid.indexOf("_URL") >= 0) {
@@ -58,6 +63,10 @@
 	    }
 	  });
 	</script>
+	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_macos.js"></script>
+	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_win32.js"></script>
+	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_win64.js"></script>
+	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_linux.js"></script>
 </head>
 <body>
 
