--- a/downloads.html
+++ b/downloads.html
@@ -461,6 +461,11 @@
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_19.10/ ./</code></small>
                             </pre>
 
+                            <h3>Ubuntu 20.04</h3>
+                            <pre>
+                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_20.04/ ./</code></small>
+                            </pre>
+
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
                             
                             <h3>openSUSE Leap 15.0 (64-bit only)</h3>
