Add video project.

--- a/gsod-2020.html
+++ b/gsod-2020.html
@@ -120,6 +120,7 @@ Overview of proposals:
     <li><a href="#usermanual">Improve the OpenSCAD User Manual</a></li>
     <li><a href="#refmanual">Improve the OpenSCAD Language Reference Manual</a></li>
     <li><a href="#tutorial">Extend the OpenSCAD Tutorial with advanced topics</a></li>
+    <li><a href="#video">Video introduction to the OpenSCAD GUI</a></li>
 </ul>
 
 We are also open for discussion about other documentation topics that could be
@@ -351,6 +352,51 @@ covered in scope of the Google Season of Docs rules.
         <td>CC-BY-SA or similar, code snippets must be CC0</td>
     </tr>
 </table>
+
+<h3 id="video">Video introduction to the OpenSCAD GUI</h3>
+
+<p>
+    Due to the fact that OpenSCAD is script based, it does not have a very
+    complicated GUI. The core GUI is basically a text editor for writing the
+    code of the 2D or 3D designs. However there are a number of features that
+    are not obvious but can help the user to work much more efficiently.
+    In addition to special features, an overview of the common workflow of
+    developing and analyzing a design would be useful.
+</p>
+
+<p>A some topics that could be covered:</p>
+
+<ul>
+    <li>Full workflow from design to export</li>
+    <li>Using the different view modes</li>
+    <li>Visual aids for debugging a design</li>
+    <li>Changing numbers via ALT+Cursor keys</li>
+    <li>Using the Customizer</li>
+</ul>
+
+<table>
+    <tr>
+        <th>Target Audience</th>
+        <td>Depending on the topic either beginner or advanced users.</td>
+    </tr>
+    <tr>
+        <th>Scope</th>
+        <td>Short and self contained introductions of specific topics.</td>
+    </tr>
+    <tr>
+        <th>Current state</th>
+        <td>No official video documentation exists, but YouTube has lots of tutorials and stream recordings.</td>
+    </tr>
+    <tr>
+        <th>Expected license</th>
+        <td>CC-BY-SA or similar, code snippets must be CC0</td>
+    </tr>
+</table>
+
+<p>
+    When selecting this project, please also provide examples of previous work
+    on video tutorials.
+</p>
 
 <h2>Contact</h2>
 
