Add links to Snap Store and FlatHub downloads.

--- a/downloads.html
+++ b/downloads.html
@@ -244,16 +244,26 @@
 				</pre>
 			</div>
 			<div id="other-linux" class="subsection">
-				<h2>Other Linux</h2>
-				<p>The AppImage package is intended to run on any recent Linux distribution. For more information about how AppImages work, see the <a href="https://appimage.org/">AppImage WebSite</a>.</p>
-				<div class="download-button">
-					<a id="LIN64_RELEASE_URL" href="https://files.openscad.org">
-					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3></a>
-					<small>x86 (64-bit) - AppImage - </small><small id="LIN64_RELEASE_SIZE">?? MB</small><br>
-					<!-- <small><a id="LIN64_RELEASE_ASC_URL" href="">asc</a></small> - -->
-					<small><a id="LIN64_RELEASE_SHA256_URL" href="">sha256</a></small> -
-					<small><a id="LIN64_RELEASE_SHA512_URL" href="">sha512</a></small>
-				</div>
+			<h2>Other Linux</h2>
+			<div class="download-button">
+				<a id="LIN64_RELEASE_URL" href="https://files.openscad.org">
+				<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3></a>
+				<small>x86 (64-bit) - AppImage - </small><small id="LIN64_RELEASE_SIZE">?? MB</small><br>
+				<!-- <small><a id="LIN64_RELEASE_ASC_URL" href="">asc</a></small> - -->
+				<small><a id="LIN64_RELEASE_SHA256_URL" href="">sha256</a></small> -
+				<small><a id="LIN64_RELEASE_SHA512_URL" href="">sha512</a></small>
+			</div>
+			<h2>App Stores</h2>
+			<div class="store-button">
+				<a href="https://snapcraft.io/openscad">
+					<img width="200" alt="Get it from the Snap Store" src="https://snapcraft.io/static/images/badges/en/snap-store-white.svg" />
+				</a>
+			</div>
+			<br/>
+			<div class="store-button">
+				<a href="https://flathub.org/apps/details/org.openscad.OpenSCAD">
+					<img width="200" alt="Download on Flathub" src="https://flathub.org/assets/badges/flathub-badge-i-en.svg"/>
+				</a>
 			</div>
 		</section>
 
@@ -374,15 +384,17 @@
 				<small><a id="LIN64_SNAPSHOT_SHA512_URL" href="">sha512</a></small>
 			</div>
 
-			    <h2>Linux - Snap</h2>
-                            <p><a href="https://snapcraft.io/openscad-nightly">Snap packages</a> are available,
-				as those are built against an older Ubuntu (16.04) those are using some older
-				components which can cause known display issues, so if possible use one of the
-				specific distribution packages below.</p>
-			    <p>Install with</p>
-                            <pre>
-                                <small><code># snap install openscad-nightly</code></small>
-                            </pre>
+			<h2>Linux - Snap</h2>
+
+			<div class="store-button">
+				<a href="https://snapcraft.io/openscad-nightly">
+					<img width="200" alt="Get it from the Snap Store" src="https://snapcraft.io/static/images/badges/en/snap-store-white.svg" />
+				</a>
+			</div>
+			<p>Or install with</p>
+			<pre>
+				<small><code># snap install openscad-nightly</code></small>
+			</pre>
 
 			    <h2><a id="snapshots-linux-distro">Linux - Distribution Packages</a></h2>
                             <p>The packages are automatically built based on the <a href="https://github.com/openscad/openscad/tree/master">master branch</a>
