--- a/gsod-2020.html
+++ b/gsod-2020.html
@@ -406,7 +406,7 @@ covered in scope of the Google Season of Docs rules.
     <li><b>Github organization:</b> <a href="https://github.com/openscad/">https://github.com/openscad/</a> (<a href="https://github.com/openscad/openscad/">source repo</a>, <a href="https://github.com/openscad/openscad.github.com
 /">web site repo</a>)</li>
     <li><b>Forum/Mailing list:</b> <a href="http://forum.openscad.org/">http://forum.openscad.org/</a></li>
-    <li><b>IRC channel #openscad on freenode:</b> <a href="https://webchat.freenode.net/?channels=openscad">https://webchat.freenode.net/?channels=openscad</a></li>
+    <li><b>IRC channel #openscad on freenode:</b> <a href="https://webchat.freenode.net/?channels=openscad">https://webchat.freenode.net/?channels=openscad</a> (please stay connected for a bit, people are located in various time zones and are working on OpenSCAD in spare time only, so replies sometimes take a while)</li>
 </ul>
 
 <b>People:</b>
