Add Mark's Enclosure Helper.

--- a/libraries.html
+++ b/libraries.html
@@ -92,11 +92,12 @@
     <h1>Libraries</h1>
     <ul>
       <li><a href="#general">General</a></li>
+      <li><a href="#singletopic">Single Topic</a></li>
     </ul>
   </div>
 
   <article>
-    <section id="General">
+    <section id="general">
       <h1>General</h1>
       <img class="libimg" src="images/bosl.gif" width="200" align="right">
       <h2>BOSL</h2>
@@ -132,6 +133,21 @@
         <li><a href="https://github.com/boltsparts/BOLTS">Library</a></li>
         <li><a href="https://boltsparts.github.io/en/index.html">Documentation</a></li>
         <li>License: LGPL-2.1-or-later | GPL-3.0-only</li>
+      </ul>
+      <p style="clear: both"></p>
+    </section>
+
+    <section id="singletopic">
+      <h1>Single Topic</h1>
+      <img class="libimg" src="images/marks-enclosure-helper.gif" width="200" align="right">
+      <h2>Mark's Enclosure Helper</h2>
+      <p>A script for generating a two piece hinged box, with rounded corners, lid,
+         interlocking rims, snap fit, magnet, or screw closures, and easy places
+         for adding cutouts or additions to any face..</p>
+      <ul>
+        <li><a href="https://github.com/h2odragon/MarksEnclosureHelper">Library</a></li>
+        <li><a href="https://github.com/h2odragon/MarksEnclosureHelper/blob/master/REFERENCE.md">Documentation</a></li>
+        <li>License: GPL-3.0-only</li>
       </ul>
       <p style="clear: both"></p>
     </section>
