Fixed links on community page sidebar

--- a/community.html
+++ b/community.html
@@ -94,10 +94,10 @@
 		<ul>
 <!--			<li><a href="#user-manual">Code Examples</a></li>-->
 <li><a href="#get-involved">Get Involved</a></li>
-<li><a href="#mailing-list">Mailing List</a></li>
+<li><a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org">Mailing List</a></li>
 <li><a href="#irc">IRC Channel</a></li>
-<li><a href="#forum">Forum</a></li>
-<li><a href="#other">Other</a></li>
+<li><a href="http://forum.openscad.org/">Forum</a></li>
+<li><a href="#http://www.thingiverse.com/groups/openscad">Other</a></li>
 <li><a href="http://twitter.com/openscad"><i class="fab fa-twitter"></i></a></li>
 		</ul>
 	</div>
@@ -108,7 +108,7 @@
 			<h1>Get Involved</h1>
 			<h2>Users</h2>
 			<ul>
-				<li>subscribe to the <a href="#mailing-list">mailing list</a> or <a href="#forum">forums</a> or join our <a href="#irc">IRC channel</a> and contribute to the user community by answering requests and take part in discussions</li>
+				<li>subscribe to the <a href="http://lists.openscad.org/mailman/listinfo/discuss_lists.openscad.org">mailing list</a> or <a href="#forum">forums</a> or join our <a href="#irc">IRC channel</a> and contribute to the user community by answering requests and take part in discussions</li>
 				<li>Report bugs, improve or validate bug reports on the <a href="https://github.com/openscad/openscad/issues">github issue tracker</a></li>
 				<li>Improve the <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">documentation</a> (it's a wiki)</li>
 			</ul>
